--- a/.github/workflows/pipeline-hotfix.yml
+++ b/.github/workflows/pipeline-hotfix.yml
@@ -23,6 +23,11 @@ jobs:
           distribution: "zulu"
           java-version: 17 
 
+      - name: Publish to Exchange
+        run: |
+          mvn deploy --settings .maven/settings.xml -DskipMunitTests \
+          -Danypoint.username="${{ secrets.USER }}" \
+          -Danypoint.password="${{ secrets.PASS }}"
 
   deployprod:
     needs: build
