--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,7 +49,7 @@ jobs:
   #         git push origin $VERSION_TAG
 
   deploydev:
-    needs: tagversion  # <-- Ensure deploydev starts only after tagversion
+    needs: build  # <-- Ensure deploydev starts only after tagversion
     runs-on: ubuntu-latest
     environment: dev
     steps:
