--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,7 +49,7 @@ jobs:
   deploydev:
     needs: build  # <-- Ensure deploydev starts only after tagversion
     runs-on: ubuntu-latest
-    environment: dev
+    # environment: dev
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
