--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,9 @@ jobs:
 
       - name: Publish to Exchange
         run: |
-          mvn deploy --settings .settings/settings.xml -DskipMunitTests 
+          mvn deploy --settings .settings/settings.xml -DskipMunitTests \
+          -Danypoint.username="${{ secrets.USER }}" \
+          -Danypoint.password="${{ secrets.PASS }}"
 
   # tagversion:
   #   needs: build   # <-- This ensures tagversion only runs after build
@@ -49,7 +51,7 @@ jobs:
   deploydev:
     needs: build  # <-- Ensure deploydev starts only after tagversion
     runs-on: ubuntu-latest
-    # environment: dev
+    environment: dev
     steps:
       - name: Checkout this repo
         uses: actions/checkout@v4
